--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "ie-shim": "^0.1.0",
+    "ng2-bootstrap": "^1.6.3",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4"
